--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -87,8 +87,10 @@ body {
 }
 
 #title-text {
-  font-size: 1.5rem;
-    text-decoration: underline;
+    /* font-size: 1.5rem; */
+  font-size: 2.5rem;
+  text-align: center;
+    /* text-decoration: underline; */
   text-transform: uppercase;
   /* color: #4b5320; */
 }
@@ -170,8 +172,10 @@ body {
   height: 7rem;
   width: 22rem;
   display: flex;
-  align-items: start;
-  justify-content: start;
+  /* align-items: start;
+  justify-content: start; */
+  align-items: center;
+  justify-content: center;
   padding: 0.25rem;
   /* text-wrap: wrap; */
   /* background-color: var(--enemy); */
@@ -179,7 +183,7 @@ body {
 
 #main-btn-container {
   height: auto;
-  width: 24rem;
+  width: 22rem;
   /* background-color: var(--line); */
   border-radius: 1rem;
   /* box-shadow: var(--box-shadow-green); */
