--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -169,17 +169,22 @@ body {
 
 #message-bar {
   /* height: fit-content; */
-  height: 7rem;
+  height: 9rem;
+  /* height: fit-content; */
   width: 22rem;
   display: flex;
   /* align-items: start;
   justify-content: start; */
   align-items: center;
   justify-content: center;
-  padding: 0.25rem;
+  padding: .5rem;
   /* text-wrap: wrap; */
   /* background-color: var(--enemy); */
 }
+
+/* .special-message-font-size {
+  font-size: 1rem;
+} */
 
 #main-btn-container {
   height: auto;
