--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -166,7 +166,7 @@ body {
   font-family: var(--font-fancy);
   /* font-size: 1rem; */
   /* margin-bottom: 1rem; */
-  margin-top: .5rem;
+  margin-top: .25rem;
   /* padding: 0.5rem; */
   /* text-align: center; */
   /* text-shadow: 
@@ -226,8 +226,8 @@ body {
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
-  font-size: 1.25rem;
-  margin: 0.5rem;
+  font-size: 1.15rem;
+  margin: 0.25rem;
   outline: none;
   /* padding: 0.25rem; */
   padding: .5rem;
@@ -254,10 +254,10 @@ body {
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
-  font-size: 0.875rem;
+  font-size: 0.85rem;
   /* gap: 1rem; */
   /* margin: 0.25rem; */
-    margin: 0.3rem;
+    margin: 0.25rem;
   outline: none;
   /* padding: 0.125rem; */
     padding: 0.5rem;
@@ -299,8 +299,8 @@ justify-content: center;
   100% { transform: translate(-2px, -2px); }
 } */
 
-#game-content {
-}
+/* #game-content {
+} */
 
 #board-container {
   height: fit-content;
@@ -456,7 +456,7 @@ margin: -1rem;
   border-radius: 100%;
   /* box-shadow: 0px 0px 40px 0px #0ff; */
   /* padding: 0rem 0rem -.0125rem 0rem; */
-  margin: .5rem;
+  margin: .125rem;
   /* animation:spin 100s linear infinite; */
 
   /* 
