more tweaks to sizing issues in mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -90,7 +90,7 @@ body {
 
 #title-text {
     /* font-size: 1.5rem; */
-  font-size: 1.35rem;
+  font-size: 1.25rem;
   text-align: center;
     /* text-decoration: underline; */
   text-transform: uppercase;
@@ -98,7 +98,7 @@ body {
 }
 
 #MMM {
-  font-size: 0.925rem;
+  font-size: 0.875rem;
   text-align: center;
 }
 
@@ -147,7 +147,8 @@ body {
 #messages {
   height: fit-content;
   /* width: 24rem; */
-  width: 21.25rem;
+  /* width: 21.25rem; */
+  /* width: 18rem; */
   display: flex;
   /* display: none; */
   align-items: center;
@@ -166,7 +167,8 @@ body {
   font-family: var(--font-fancy);
   /* font-size: 1rem; */
   /* margin-bottom: 1rem; */
-  margin-top: .25rem;
+  /* margin-top: .25rem; */
+  margin: .25rem;
   /* padding: 0.5rem; */
   /* text-align: center; */
   /* text-shadow: 
@@ -198,7 +200,8 @@ body {
 
 #main-btn-container {
   height: auto;
-  width: 22rem;
+  /* width: 22rem; */
+    width: 15rem;
   /* background-color: var(--line); */
   border-radius: 1rem;
   /* box-shadow: var(--box-shadow-green); */
@@ -218,19 +221,21 @@ body {
   /* height: 3.75rem; */
   height: fit-content;
   /* width: 24rem; */
-  width: 19rem;
+  width: 15rem;
   /* width: fit-content; */
+  display: flex;
+  flex-wrap: wrap;
   background-color: var(--line);
   border: .125rem solid var(--text);
   border-radius: 1rem;
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
-  font-size: 1.15rem;
+  font-size: 1.1rem;
   margin: 0.25rem;
   outline: none;
   /* padding: 0.25rem; */
-  padding: .5rem;
+  padding: .25rem;
 }
 
 .btn-a:hover {
@@ -245,7 +250,8 @@ body {
 }
 
 .btn-b {
-  height: 2rem;
+  /* height: 2rem; */
+    height: 1.65rem;
   /* width: 4.25rem; */
   width: fit-content;
   background-color: var(--line);
@@ -254,13 +260,13 @@ body {
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
-  font-size: 0.85rem;
+  font-size: 0.8rem;
   /* gap: 1rem; */
   /* margin: 0.25rem; */
     margin: 0.25rem;
   outline: none;
   /* padding: 0.125rem; */
-    padding: 0.5rem;
+    padding: 0.25rem;
 }
 
 .btn-b:hover {
@@ -359,18 +365,18 @@ justify-content: center;
     /* display: flex; */
 }
 
-.flip-full-board {
-  background-color: red;
-
-}
-
 #p1-deployment-zone,
 #p1-target-zone,
 #p2-deployment-zone,
 #p2-target-zone {
   /* height: 23rem; */
-  height: 21.5rem;
-  width: 20rem;
+
+  /* height: 21.5rem;
+  width: 20rem; */
+
+  height: 15rem;
+  width: 15rem;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -378,7 +384,8 @@ justify-content: center;
   justify-content: center;
   font-family: var(--font-fancy);
   font-size: 1rem;
-  margin: 0.125rem;
+  /* margin: 0.125rem; */
+  margin: .5rem;
   overflow: visible;
   text-transform: uppercase;
   /* z-index: 0; */
@@ -391,10 +398,20 @@ justify-content: center;
   color: var(--line);
 }
 
+#p1-deployment-zone,
+#p1-target-zone,
+#p2-deployment-zone,
+#p2-target-zone {
+  margin-bottom: 1.5rem;
+} 
+
 #p1-place-ships,
 #p2-place-ships {
   height: fit-content;
-  width: 20rem;
+  /* width: 20rem; */
+
+    width: fit-content;
+
   /* display: none; */
   /* display: flex; */
   flex-direction: column;
@@ -439,8 +456,10 @@ margin: -1rem;
 
 #p1-x5-grid,
 #p2-x5-grid {
-  height: 12rem;
-  width: 12rem;
+  /* height: 12rem;
+  width: 12rem; */
+  height: 9rem;
+  width: 9rem;
   display: flex;
   flex-direction: column;
   flex-wrap: no-wrap;
@@ -488,7 +507,8 @@ margin: -1rem;
 
 .all-p1-place-ships,
 .all-p2-place-ships {
-  height: 2rem;
+  /* height: 2rem; */
+  height: 1.5rem;
 }
 
 .all-p1-place-ships:hover,
@@ -541,8 +561,11 @@ margin: -1rem;
 #p2-target-ship-board,
 #p1-target-hit-miss-board,
 #p2-target-hit-miss-board {
-  height: 20rem;
-  width: 22rem;
+  /* height: 20rem; */
+  height: 15rem;
+  /* width: 22rem; */
+    width: 15rem;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -568,13 +591,17 @@ margin: -1rem;
 #p2-hit-miss-board,
 #p1-target-hit-miss-board,
 #p2-target-hit-miss-board {
-  height: auto;
-  width: 22rem;
+  /* height: auto; */
+    height: 15rem;
+  /* width: 22rem; */
+    width: 15rem;
+    
   font-family: var(--font-emoji);
   /* z-index: -2; */
   /* Below is the key way to center effects */
   /* margin-top: -21.25rem; */
-  margin-top: -20.25rem;
+  /* margin-top: -20.25rem; */
+    margin-top: -15rem;
 }
 
 .ship-cells1,
@@ -585,19 +612,27 @@ margin: -1rem;
 .hit-miss-cells2,
 .hit-miss-target-cells1,
 .hit-miss-target-cells2 {
-  height: 2rem;
-  width: 2rem;
+  /* height: 2rem; */
+    height: 1.5rem;
+  /* width: 2rem; */
+    width: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: var(--font-emoji);
-  font-size: 100%;
+  /* font-size: 100%; */
+  font-size: 70%;
   text-align: center;
 }
 
 .ship-cells1,
 .ship-cells2 {
   border: 0.085rem dashed var(--line);
+}
+
+#ship-a1, #ship-b1, #ship-d1, #ship-s1, #ship-c1, #ship-a2, #ship-b2, #ship-d2, #ship-s2, #ship-c2 {
+  height: 1.5rem;
+  width: auto;
 }
 
 .ship-target-cells1,
@@ -615,23 +650,10 @@ margin: -1rem;
 }
 
 .ship {
-  height: 2rem;
+  /* height: 2rem; */
+    height: 1.5rem;
   /* width: .25rem; */
-}
-
-.hit {
-}
-
-.mouse-deploy {
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
-}
-
-.mouse-target {
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
+  /* margin-left: -2rem; */
 }
 
 .mouse-deploy:hover {
