--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -69,6 +69,8 @@ body {
   background: linear-gradient(5deg, var(--bkgd), var(--bkgd2));
 
   margin: 0;
+    overflow-y: hidden;
+
 }
 
 #header {
@@ -146,6 +148,8 @@ body {
 
 #messages {
   height: fit-content;
+    width: 98vw;
+    
   /* width: 24rem; */
   /* width: 21.25rem; */
   /* width: 18rem; */
@@ -188,6 +192,7 @@ body {
   justify-content: start; */
   align-items: center;
   justify-content: center;
+  font-size: .8rem;
   /* padding: .5rem; */
     padding: .25rem;
   /* text-wrap: wrap; */
@@ -201,7 +206,8 @@ body {
 #main-btn-container {
   height: auto;
   /* width: 22rem; */
-    width: 15rem;
+    /* width: 15rem; */
+      width: 98vw;
   /* background-color: var(--line); */
   border-radius: 1rem;
   /* box-shadow: var(--box-shadow-green); */
@@ -221,7 +227,8 @@ body {
   /* height: 3.75rem; */
   height: fit-content;
   /* width: 24rem; */
-  width: 15rem;
+  /* width: 15rem; */
+    width: 98vw;
   /* width: fit-content; */
   display: flex;
   flex-wrap: wrap;
@@ -323,7 +330,10 @@ justify-content: center;
   /* height: 72.5rem; */
   height: fit-content;
   /* width: 24rem; */
-  width: fit-content;
+  /* width: fit-content; */
+
+  width: 98vw;
+  
   display: flex;
   /* flex-direction: row; */
   flex-direction: column;
@@ -343,7 +353,8 @@ justify-content: center;
   /* font-size: 1.5rem; */
     font-size: 1.25rem;
   margin: 0.25rem;
-  padding: 0.25rem;
+  /* padding: 0.25rem; */
+    padding: 0.5rem;
   overflow: visible;
   text-transform: uppercase;
   /* z-index: -1; */
