--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -165,7 +165,7 @@ body {
   /* border: 0.5rem double var(--text); */
     /* border: .125rem solid var(--text); */
         /* border: .125rem solid var(--loser); */
-                border: .25rem solid var(--loser);
+                border: .125rem dashed var(--loser);
   border-radius: 1rem;
   box-shadow: var(--box-shadow-green);
   /* color: var(--line); */
@@ -196,7 +196,7 @@ body {
   justify-content: center;
   font-size: 1rem;
   /* padding: .5rem; */
-    padding: .25rem;
+    padding: .5rem;
   /* text-wrap: wrap; */
   /* background-color: var(--enemy); */
 }
@@ -227,7 +227,7 @@ body {
   /* height: auto; */
   /* height: fit-content; */
   /* height: 3.75rem; */
-  height: 1.75rem;
+  height: 2rem;
 
   /* width: 24rem; */
   /* width: 15rem; */
@@ -237,7 +237,7 @@ body {
   flex-wrap: wrap;
   background-color: var(--line);
   border: .125rem solid var(--text);
-  border-radius: 1rem;
+  border-radius: .5rem;
   box-shadow: var(--box-shadow-green);
   color: var(--text);
   font-family: var(--font-fancy);
@@ -278,7 +278,7 @@ body {
     margin: 0.25rem;
   outline: none;
   /* padding: 0.125rem; */
-    padding: 0.25rem;
+    padding: 0.2rem;
 }
 
 .btn-b:hover {
@@ -335,9 +335,9 @@ justify-content: center;
   /* height: 72.5rem; */
   height: fit-content;
   /* width: 24rem; */
-  /* width: fit-content; */
+  width: fit-content;
 
-  width: 98vw;
+  /* width: 98vw; */
   
   display: flex;
   /* flex-direction: row; */
@@ -359,7 +359,7 @@ justify-content: center;
     font-size: 1.25rem;
   margin: 0.25rem;
   /* padding: 0.25rem; */
-    padding: 0.5rem;
+    padding: 0.25rem;
   overflow: visible;
   text-transform: uppercase;
   /* z-index: -1; */
@@ -419,7 +419,7 @@ justify-content: center;
 #p1-target-zone,
 #p2-deployment-zone,
 #p2-target-zone {
-  border-radius: 1rem;
+  border-radius: .5rem;
   /* margin-bottom: 1rem; */
 } 
 
