--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -92,17 +92,25 @@ body {
 
 }
 
-#title-text {
+#title-text-top, #title-text-bot {
     /* font-size: 1.5rem; */
-  font-size: 1.25rem;
+  font-size: 2.5rem;
   text-align: center;
     /* text-decoration: underline; */
   text-transform: uppercase;
   /* color: #4b5320; */
 }
 
+/* #title-text-top {
+    text-decoration: underline;
+} */
+
+#title-text-bot {
+    text-decoration:overline;
+}
+
 #MMM {
-  font-size: 0.875rem;
+  font-size: 0.8rem;
   text-align: center;
 }
 
@@ -126,14 +134,19 @@ body {
   /* width: 22rem; */
   width: 19rem;
   /* border: 0.5rem solid var(--text); */
-    border: 0.5rem double var(--text);
+    border: .5rem solid var(--text);
   border-radius: 50%;
   box-shadow: var(--box-shadow-green);
   filter: grayscale(60%) sepia(60%);
   /* transform: rotate(0.5deg); */
   /* animation: noise 0.1s infinite alternate; */
   /* filter: grayscale(80%) sepia(40%) contrast(120%) brightness(90%); */
-  /* padding: 1rem; */
+  object-fit: cover;
+
+  object-position: 50%;
+  padding: .125rem;
+  /* margin: -1rem; */
+
 }
 
 .text-effect-dark {
@@ -150,7 +163,7 @@ body {
 
 #messages {
   height: fit-content;
-    width: 98vw;
+    width: 93vw;
     
   /* width: 24rem; */
   /* width: 21.25rem; */
@@ -209,7 +222,7 @@ body {
   height: auto;
   /* width: 22rem; */
     /* width: 15rem; */
-      width: 98vw;
+      width: 94vw;
   /* background-color: var(--line); */
   border-radius: 1rem;
   /* box-shadow: var(--box-shadow-green); */
@@ -231,7 +244,7 @@ body {
 
   /* width: 24rem; */
   /* width: 15rem; */
-    width: 98vw;
+    width: 94vw;
   /* width: fit-content; */
   display: flex;
   flex-wrap: wrap;
@@ -337,7 +350,7 @@ justify-content: center;
   /* width: 24rem; */
   width: fit-content;
 
-  /* width: 98vw; */
+  /* width: 4vw; */
   
   display: flex;
   /* flex-direction: row; */
