--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -155,8 +155,8 @@ body {
 }
 
 .text-effect-dark {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3), -2px -2px 4px rgba(0, 0, 0, 0.3),
-    4px 4px 6px rgba(0, 0, 0, 0.3);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3), -1px -1px 2px rgba(0, 0, 0, 0.3),
+    3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 /* .text-effect-light {
@@ -176,8 +176,8 @@ body {
   /* width: 18rem; */
   display: flex;
   /* display: none; */
-  /* align-items: center; */
-  /* justify-content: start; */
+  align-items: center;
+  justify-content: center;
   /* background-color: var(--text); */
   /* background-color: var(--enemy); */
     background-color: var(--line);
@@ -211,8 +211,8 @@ body {
   display: flex;
   /* align-items: start;
   justify-content: start; */
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   font-size: .9rem;
   /* padding: .5rem; */
     padding: .45rem;
